--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,86 @@
-<ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<div color="primary">
+<ion-menu color="dark" [content]="content">
+    <ion-header>
+      <ion-toolbar color="dark2">
+        <!-- <ion-title></ion-title> -->
+      </ion-toolbar>
+    </ion-header>
+  
+    <!-- <ion-content color="dark">
+        <ion-list color="dark">
+            <button  color="dark1" class="de11"  *ngFor="let p of pages" (click)="openPage(p)" ion-button full outline  style="text-align : left;">
+            <ion-icon name={{p.icon}}></ion-icon> &nbsp;&nbsp; {{p.title}}       
+         </button>
+
+         <ion-footer>
+          <ion-list text-center>
+              <img src="assets/imgs/truck.png" class="super-avatar" item-right/>
+              <p style=" color: white;" absolute-drag>AITrucked App</p>
+              <p style=" color: white;" absolute-drag>v.0.9.1</p>
+            </ion-list>
+          </ion-footer> 
+        </ion-list>     
+    </ion-content>
+  </ion-menu> -->
 
   <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
-  </ion-content>
+      <ion-list>
+          <!-- <button  color="dark1" class="de11"  *ngFor="let p of pages" (click)="openPage(p)" >
+              <ion-icon name={{p.icon}}></ion-icon> &nbsp;&nbsp;&nbsp;
+            {{p.title}}
+        </button> -->
+        <ion-item no-lines color="dark" class="de11" *ngFor="let p of pages" (click)="openPage(p)">
+            <ion-icon name={{p.icon}}></ion-icon> &nbsp;&nbsp;
+            {{p.title}}
+        </ion-item>
+      
+      </ion-list>
+      <ion-footer>
+          <ion-list text-center>
+              <img src="assets/imgs/truck.png" class="super-avatar" item-right/>
+              <p style=" color: white;" absolute-drag>AITrucked App</p>
+              <p style=" color: white;" absolute-drag>v.0.9.1</p>
+            </ion-list>
+          </ion-footer> 
+    </ion-content>
+  </ion-menu>
+  
+  
+  
+  
+  <ion-menu [content]="content" color="dark" side="right" id="menu2">
+    <ion-header color="dark">
+        <ion-toolbar color="dark2">
+            <ion-title></ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-</ion-menu>
-
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+    <ion-content>
+        <ion-list>
+            <!-- <button  color="dark1" class="de11"  *ngFor="let p of pages" (click)="openPage(p)" >
+                <ion-icon name={{p.icon}}></ion-icon> &nbsp;&nbsp;&nbsp;
+              {{p.title}}
+          </button> -->
+          <ion-item no-lines color="dark" class="de11" *ngFor="let p of pages1" (click)="openPage(p)">
+              <ion-icon name={{p.icon}}></ion-icon> &nbsp;&nbsp;
+              {{p.title}}
+          </ion-item>
+        
+        </ion-list>
+        
+      </ion-content>
+    <!--     
+    <ion-content color="dark">
+        <ion-grid color="dark">
+            <button  color="dark1" class="de11"  *ngFor="let p of pages1" (click)="openPage(p)" ion-button full outline  style="text-align : left;">
+           <ul>           
+            <ion-icon name={{p.icon}}></ion-icon> &nbsp;&nbsp;&nbsp;
+           {{p.title}}
+          </ul>
+         </button>
+       </ion-grid>
+      </ion-content> -->
+  </ion-menu>
+  
+  <ion-nav color="dark" [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+</div>
