--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,4 +1,5 @@
-page-home {
+page-search {
+
     #search {
         //background: #5c5f5f;
         
@@ -25,11 +26,7 @@ page-home {
     .searchbar-search-icon {
         display:none; 
         width:0;
-        height:0;  
-    }
-
-    h1,h2,h3,p{
-        font-weight: 100px;
-        color: aliceblue;
-    }
+        height:0;
+        
+    }   
 }
