--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,6 +5,8 @@
 // roboto, and noto sans fonts
 $font-path: "../assets/fonts";
 
+//$searchbar-md-input-search-icon-color: red;
+$searchbar-ios-input-text-color: rgb(252, 248, 248);
 
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
@@ -38,7 +40,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  dark1:      rgb(58, 56, 56),
+  dark2:       rgb(75, 71, 71)
 );
 
 
