--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,5 +1,10 @@
 page-map {
 
+    .content-md{
+        background-color: rgb(80, 78, 78) !important;
+    }
+
+    
     #search {
         //background: #5c5f5f;
         
