--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -61,3 +61,10 @@
 
 }
 
+ion-menu{
+    ion-content{
+     background-color:rgb(77, 74, 74) !important;
+    // background: rgb(77, 74, 74);
+    }
+   }
+
