--- a/src/pages/requisition/requisition.scss
+++ b/src/pages/requisition/requisition.scss
@@ -1,5 +1,85 @@
 page-requisition {
 
+.inputWithIcon input{
+    border-color:dodgerBlue;
+    box-shadow:0 0 8px dodgerBlue;
+}
+
+.inputWithIcon input{
+   padding-left:40px;
+}
+
+.inputWithIcon input{
+    position:absolute;
+    left:0;
+    top: 8px;
+    padding:9px 8px;
+    color:#aaa;
+    transition: .3s;
+}
+
+.inputWithIcon input[type=text]:focus + i{
+   color: dodgerBlue;
+}
+
+    textarea{
+        float:left;
+    }
+
+    .container {
+        position: relative;
+        display:inline-block;
+    }
+    .text-area {
+        width: 200px;
+        height: 50px;
+        border:1px solid #ccc;
+        display:inline-block;
+    }
+    
+    .icon-example:after {
+        content: url(http://www.stat.ncsu.edu/dept-icons/camera-icon.gif);
+        position:absolute;
+        z-index:9999;
+        right: 3px;
+        bottom: 6px;
+    }
+    
+    .hidden {
+        display:none;
+    }
+
+
+    lable {
+        color: red;
+        opacity: 1; 
+    }
+
+     #textarea{
+         padding-top: 100px;
+         padding-left: 5px;
+         padding-right: 5px;
+         background: rgb(71, 70, 70);
+         border:solid 2px;
+     }
+
+    .secondry-content{
+        background-color: rgb(71, 70, 70) !important;
+        padding-left: -5px;
+       padding-right: 80px;
+    }
+    
+    .item-divider{
+        margin-top: 70px;
+        max-width: 200%;
+      }
+    
+    .content-md{
+        //background-color: rgb(80, 78, 78) !important;
+        color: aliceblue;
+    }
+
+    
     #search {
         //background: #5c5f5f;
         
@@ -29,4 +109,51 @@ page-requisition {
         height:0;
         
     }
+    
+    .toolbar-md {
+        padding: 4px;
+        min-height: 30px;
+        max-height: 40px;
+    }
+
+
+
+//    ion-textarea {
+//         border: 6px;
+//         background: #5c5f5f;
+//        //background: #ffff;
+//         overflow: auto;
+//         outline: none;
+//         width: 100%;
+//         height: 100%;
+//         -webkit-border-radius: 5px;
+//         -moz-border-radius: 5px;
+//         border-radius: 10px;
+//     }
+
+.container {
+    width: 400px;
+}
+
+ion-textarea {
+    border: none;
+    border-collapse:collapse;
+    border-right: #5c5f5f 1px solid;
+    border-left: #5c5f5f 1px solid;
+    resize: none;
+    margin: 0;
+    padding: 0;
+    width: 400px;
+}
+    
+
+     .item-md{
+         padding-left: 16px;
+         padding-right: 0;
+         position: relative;
+         font-size: 1.6rem;
+         font-weight: 1px;
+         text-transform: none;
+         color: #ffff;
+     }
 }
