--- a/src/pages/tickets/tickets.scss
+++ b/src/pages/tickets/tickets.scss
@@ -4,29 +4,24 @@ page-tickets {
         background-color: rgb(80, 78, 78) !important;
     }
 
-    
-    #search {
-        //background: #5c5f5f;
-        
+    .secondry-content{
+        background-color: rgb(80, 78, 78);
+        float:left;
     }
-
+    
     .searchbar-md .searchbar-input {
         background: linear-gradient(to bottom right, #5c5f5f, #5c5f5f);
         //background-color: #009196;
         padding-left: 9px !important;
         color: rgb(245, 240, 240);
-           
- 
       }
       
-
       #home-search {
         width: 100%;
         height:10%;
         color:white;
         margin: auto;
     }
-
 
     .searchbar-search-icon {
         display:none; 
@@ -37,5 +32,15 @@ page-tickets {
     h1,h2,h3,p{
         font-weight: 100px;
         color: aliceblue;
+    }
+    
+    .item-md{
+        padding-left: 16px;
+        padding-right: 0;
+        position: relative;
+        font-size: 1.6rem;
+        font-weight: 1px;
+        text-transform: none;
+        color: #ffff;
     }
 }
